--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2"
   }
 }
