--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.9",
+    "babel-loader": "^9.1.3",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
   }
