--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^5.5.3",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
+    "react": "^18.2.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "webpack-dev-server": "^4.15.1"
