--- a/package.json
+++ b/package.json
@@ -326,7 +326,6 @@
     "watchpack": "^2.4.0",
     "wbuf": "^1.7.3",
     "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
@@ -341,7 +340,9 @@
     "yallist": "^4.0.0",
     "yocto-queue": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
